--- a/TaskManager/Views/Users/Index.cshtml
+++ b/TaskManager/Views/Users/Index.cshtml
@@ -1,13 +1,12 @@
 ﻿@model IEnumerable<TaskManager.Models.User>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Users";
 }
 
-<h1>Index</h1>
-
+<h1>Users</h1>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -17,9 +16,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedAt)
             </th>
             <th></th>
         </tr>
@@ -35,12 +31,57 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.UserId">Details</a>
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.UserId">Edit</a>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<h1>Tasks</h1>
+<p>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Status)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedAt)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.CreatedAt)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.TaskId">Details</a>
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.TaskId">Edit</a>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.TaskId">Delete</a>
                 </td>
             </tr>
         }
