--- a/TaskManager/wwwroot/css/site.css
+++ b/TaskManager/wwwroot/css/site.css
@@ -1,18 +1,11 @@
-﻿html {
-  font-size: 14px;
+﻿body {
+    padding-top: 20px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.navbar-brand {
+    font-weight: bold;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+.table th, .table td {
+    vertical-align: middle;
 }
