--- a/TaskManager/Views/Tasks/Create.cshtml
+++ b/TaskManager/Views/Tasks/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create Task</h1>
 
-<form asp-action="Create">
+<form asp-action="Create" method="post">
     <div class="form-group">
         <label asp-for="Title" class="control-label"></label>
         <input asp-for="Title" class="form-control" />
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Description" class="control-label"></label>
-        <textarea asp-for="Description" class="form-control"></textarea>
+        <input asp-for="Description" class="form-control" />
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="form-group">
@@ -28,6 +28,6 @@
         <span asp-validation-for="UserId" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
+        <button type="submit" class="btn btn-primary">Create</button>
     </div>
 </form>
